added first lines

--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
   <title>gogole 2.0</title>
   <link rel="stylesheet" href="style.css">
 
+  	<div class="container">
+    <nav id="nav">
+    <ul>
+     <li>
+      <a href="1">
+       Gmail
+      </a>
+     </li>
+
+     <li>
+      <a href="1">
+       Images
+      </a>
+     </li>
+
 </head>
 
 <body>
