--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <meta charset="utf-8">
   <title>gogole 2.0</title>
   <link rel="stylesheet" href="style.css">
+</head>
 
+
+<body>
   	<div class="container">
     <nav id="nav">
     <ul>
@@ -18,13 +21,14 @@
 
      <li>
       <a href="1">
-       Images
+       Images 
       </a>
      </li>
-
-</head>
-
-<body>
+    </ul>
+    </nav>
+    <div id="sign">
+        Connexion
+      </div>
 
 </body>
 
