--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <nav id="nav">
     <ul>
      <li>
-      <a href="1">
+      <a href="#">
        Gmail
       </a>
      </li>
 
      <li>
-      <a href="1">
+      <a href="#">
        Images 
       </a>
      </li>
@@ -30,6 +30,33 @@
         Connexion
       </div>
 
+    <img src="gogole.JPG" alt="Gogole" />
+    <form>
+     <input type="text" />
+    <div id="footer">
+     <ul>
+     <li>
+      <a href="#">
+        publicité</a>
+      <a href="#">
+        Entreprise</a>
+      <a href="#">
+        A propos</a>
+      </a>
+     </li>
+     
+     <li>
+     <a href="#">
+        Confidentialité</a>
+      <a href="#">
+        Conditions</a>
+      <a href="#">
+        Paramètres</a>
+      <a href="#">
+        Utiliser Google.com</a>
+      </li>
+     </ul>   
+    </div>
+    </div>
 </body>
-
 </html>
