--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <title>gogole 2.0</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="favicon.png" />
 </head>
 
 
