--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 
-<head>
+<head> <!-- entete  --> 
   <meta charset="utf-8">
   <title>gogole 2.0</title>
   <link rel="stylesheet" href="style.css">
@@ -10,7 +10,7 @@
 </head>
 
 
-<body>
+<body><!-- header --> 
   	<div class="container">
     <nav id="nav">
     <ul>
@@ -30,10 +30,11 @@
     <div id="sign">
         Connexion
       </div>
-
+<!-- milieu --> 
     <img src="gogole.JPG" alt="Gogole" />
     <form>
      <input type="text" />
+<!-- footer--> 
     <div id="footer">
      <ul>
      <li>
@@ -45,7 +46,7 @@
         A propos</a>
       </a>
      </li>
-     
+
      <li>
      <a href="#">
         Confidentialité</a>
